--- a/CSS/sobre.css
+++ b/CSS/sobre.css
@@ -143,25 +143,20 @@ a {
   border-radius: 8px;
 }
 
-.profile-image {
-  width: 150px;
-  height: auto;
-  border-radius: 50%;
-  border: 4px solid #d870db;
-}
 
-.name-text {
+.name-text-about {
   font-family: "Oswald", sans-serif;
   font-size: 21px;
   margin-top: 15px;
 }
 
-.profile-text {
+.profile-text-about{
   font-family: "Oswald", sans-serif;
   font-size: 17px;
   text-align: center;
   width: 80%;
-  margin-top: 10px;
+  
+
 }
 
 .profile-button {
